Fixed everything except redis